# ros_exercises

./: .gitignore  README.md
01_publisher_subscriber_time/: CMakeLists.txt
01_publisher_subscriber_time/msg/: myTime.msg
01_time_pubsub/: CMakeLists.txt  package.xml
01_time_pubsub/src/: time_publisher.cpp  time_subscriber.cpp
02_date_to_day/: package.xml
02_services_date_to_day/: CMakeLists.txt
02_services_date_to_day/srv/: dateToDay.srv
03_opencv_ball_tracking/: CMakeLists.txt  package.xml
03_opencv_ball_tracking/src/: ball_tracker.cpp
04_lidar_lidar/: CMakeLists.txt  package.xml
04_lidar_lidar/src/: lidar_sub.cpp
05_turtle_follower/: CMakeLists.txt  package.xml
05_turtle_follower/launch/: turtle_follower.launch
05_turtle_follower/src/: tf_broadcaster.cpp
date_to_day/: CMakeLists.txt
date_to_day/src/: date2day_server.cpp  date_to_day_client.cpp
ros_ball_tracking/: CMakeLists.txt  package.xml
ros_ball_tracking/launch/: ball_tracker.launch
time_pubsub/: CMakeLists.txt  package.xml
